force-app/main/default/objects/Contact/fields/b3o__Citizenship__c.field-meta.xml
<CustomField>
    <fullName>b3o__Citizenship__c</fullName>
    <label>Citizenship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A citizen of the United States</fullName>
            </value>
            <value>
                <fullName>A noncitizen national of the United States</fullName>
            </value>
            <value>
                <fullName>A lawful permanent resident</fullName>
            </value>
            <value>
                <fullName>A noncitizen authorized to work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>