force-app/main/default/objects/Contact/fields/b3o__Disciplines__c.field-meta.xml
<CustomField>
    <fullName>b3o__Disciplines__c</fullName>
    <label>Disciplines</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANX (Anesthesia)</fullName>
            </value>
            <value>
                <fullName>CCE (Critical Care)</fullName>
            </value>
            <value>
                <fullName>CNA (Certified Nurse Anesthetists)</fullName>
            </value>
            <value>
                <fullName>ERM (Emergency Medicine)</fullName>
            </value>
            <value>
                <fullName>FAM (Family Medicine)</fullName>
            </value>
            <value>
                <fullName>GST (Gastroenterology)</fullName>
            </value>
            <value>
                <fullName>HOS (Hospital Medicine)</fullName>
            </value>
            <value>
                <fullName>INT (Internal Medicine)</fullName>
            </value>
            <value>
                <fullName>INV (Intensive Medicine)</fullName>
            </value>
            <value>
                <fullName>PSY (Psychiatry)</fullName>
            </value>
            <value>
                <fullName>RAD (Radiology)</fullName>
            </value>
            <value>
                <fullName>SGL (Surgical Services)</fullName>
            </value>
            <value>
                <fullName>SUR (Surgery)</fullName>
            </value>
            <value>
                <fullName>TRA (Trauma)</fullName>
            </value>
            <value>
                <fullName>WAC (Women &amp; Children)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>