force-app/main/default/objects/Contact/fields/b3o__Form_I_94_Admission_Number__c.field-meta.xml
<CustomField>
    <fullName>b3o__Form_I_94_Admission_Number__c</fullName>
    <label>Form I-94 Admission Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>