force-app/main/default/objects/Contact/fields/b3o__Linkedin_Profile_Link__c.field-meta.xml
<CustomField>
    <fullName>b3o__Linkedin_Profile_Link__c</fullName>
    <label>Linkedin Profile Link</label>
    <type>Url</type>
</CustomField>