force-app/main/default/objects/Contact/fields/b3o__National_Identity_Number__c.field-meta.xml
<CustomField>
    <fullName>b3o__National_Identity_Number__c</fullName>
    <inlineHelpText>SSN, NI</inlineHelpText>
    <label>National Identity Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>