force-app/main/default/objects/Contact/fields/b3o__Profession__c.field-meta.xml
<CustomField>
    <fullName>b3o__Profession__c</fullName>
    <label>Profession</label>
    <length>255</length>
    <type>Text</type>
</CustomField>