force-app/main/default/objects/Contact/fields/b3o__Summary__c.field-meta.xml
<CustomField>
    <fullName>b3o__Summary__c</fullName>
    <label>Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>