force-app/main/default/objects/Contact/fields/b3o__USCIS_A_Number__c.field-meta.xml
<CustomField>
    <fullName>b3o__USCIS_A_Number__c</fullName>
    <label>USCIS A-Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>