force-app/main/default/objects/Contact/fields/b3o__Verified_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>b3o__Verified_Timestamp__c</fullName>
    <label>Verified Timestamp</label>
    <type>DateTime</type>
</CustomField>