force-app/main/default/objects/Contact/fields/b3p__Disabled_Portal_User__c.field-meta.xml
<CustomField>
    <fullName>b3p__Disabled_Portal_User__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this and we will prevent portal logins for this user.</inlineHelpText>
    <label>Disabled Portal User</label>
    <type>Checkbox</type>
</CustomField>