force-app/main/default/objects/Contact/fields/b3p__Password__c.field-meta.xml
<CustomField>
    <fullName>b3p__Password__c</fullName>
    <label>DEPRECATED</label>
    <length>255</length>
    <type>Text</type>
</CustomField>