force-app/main/default/objects/Contact/fields/b3p__Temporary_Password__c.field-meta.xml
<CustomField>
    <fullName>b3p__Temporary_Password__c</fullName>
    <label>Temporary Access Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>