force-app/main/default/objects/Contact/fields/Banquo_Compliance_completed__c.field-meta.xml
<CustomField>
    <fullName>Banquo_Compliance_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Banquo Compliance completed?</label>
    <type>Checkbox</type>
</CustomField>