force-app/main/default/objects/Contact/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick to make this Contact selectable as the Invoice Contact on WFM Contracts and Jobs.</inlineHelpText>
    <label>Invoice Contact</label>
    <type>Checkbox</type>
</CustomField>