force-app/main/default/objects/Contact/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <defaultValue>CASE($Profile.Name, 
  &quot;Prospero Health &amp; Social Care User&quot;, &quot;Health &amp; Social Care&quot;, 
  &quot;Prospero Teaching User&quot;, &quot;Teaching&quot;, 
  &quot;Prospero Integrated User&quot;, &quot;Integrated&quot;, 
  &quot;&quot;
)</defaultValue>
    <description>Contacts - Limit picklist values by Brand: https://1218globaluk.eu.teamwork.com/app/tasks/36116437</description>
    <inlineHelpText>Select the Brand to show brand specific fields and to change the values of some of the picklists.</inlineHelpText>
    <label>Brand</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brand</valueSetName>
    </valueSet>
</CustomField>