force-app/main/default/objects/Contact/fields/Brand_Formula__c.field-meta.xml
<CustomField>
    <fullName>Brand_Formula__c</fullName>
    <formula>SUBSTITUTE( IF(INCLUDES(Brand__c, &quot;Health &amp; Social Care&quot;), &quot;Health &amp; Social Care; &quot;, &quot;&quot;) &amp; IF(INCLUDES(Brand__c, &quot;Teaching&quot;), &quot;Teaching; &quot;, &quot;&quot;) &amp; IF(INCLUDES(Brand__c, &quot;Integrated&quot;), &quot;Integrated; &quot;, &quot;&quot;) &amp; &quot;BLANK&quot;, &quot;; BLANK&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand Formula</label>
    <type>Text</type>
</CustomField>