force-app/main/default/objects/Contact/fields/Brand_Single_Pick__c.field-meta.xml
<CustomField>
    <fullName>Brand_Single_Pick__c</fullName>
    <defaultValue>CASE($Profile.Name,
&quot;Prospero Health &amp; Social Care User&quot;, &quot;Health &amp; Social Care&quot;,
&quot;Prospero Teaching User&quot;, &quot;Teaching&quot;,
&quot;Prospero Integrated User&quot;, &quot;Integrated&quot;,
&quot;&quot;
)</defaultValue>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dual - Teaching AND Health &amp; Social Care</fullName>
            </value>
            <value>
                <fullName>Integrated</fullName>
            </value>
            <value>
                <fullName>Health &amp; Social Care</fullName>
            </value>
            <value>
                <fullName>Teaching</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>