force-app/main/default/objects/Contact/fields/Candidate_LTD_Ref__c.field-meta.xml
<CustomField>
    <fullName>Candidate_LTD_Ref__c</fullName>
    <formula>Auto_Evertime_External_ID__c &amp; &quot;-L&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate LTD Ref</label>
    <type>Text</type>
</CustomField>