force-app/main/default/objects/Contact/fields/Candidate_Photo__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Photo__c</fullName>
    <label>Candidate Photo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>