force-app/main/default/objects/Contact/fields/Candidate_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Reference_Number__c</fullName>
    <label>Candidate Reference Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>