force-app/main/default/objects/Contact/fields/Candidate_Umbrella_Ref__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Umbrella_Ref__c</fullName>
    <formula>Auto_Evertime_External_ID__c &amp; &quot;-U&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Umbrella Ref</label>
    <type>Text</type>
</CustomField>