force-app/main/default/objects/Contact/fields/Client_Phone__c.field-meta.xml
<CustomField>
    <fullName>Client_Phone__c</fullName>
    <formula>Account.Phone</formula>
    <label>Client Phone</label>
    <type>Text</type>
</CustomField>