force-app/main/default/objects/Contact/fields/Compliance_Status__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Status__c</fullName>
    <label>Compliance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Registration</fullName>
            </value>
            <value>
                <fullName>Compliance In Progress</fullName>
            </value>
            <value>
                <fullName>Compliant</fullName>
            </value>
            <value>
                <fullName>Compliant (Client Notification Required)</fullName>
            </value>
            <value>
                <fullName>Lapsed Compliance</fullName>
            </value>
            <value>
                <fullName>Compliance Review Required</fullName>
            </value>
            <value>
                <fullName>Re-Registration Required</fullName>
            </value>
            <value>
                <fullName>Failed compliance</fullName>
            </value>
            <value>
                <fullName>Safeguarding Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>