force-app/main/default/objects/Contact/fields/Contact_Name_Chinese__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name_Chinese__c</fullName>
    <label>Contact Name Chinese</label>
    <length>255</length>
    <type>Text</type>
</CustomField>