force-app/main/default/objects/Contact/fields/Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>You have cleared this person who is eligible to authorise billing/jobs</inlineHelpText>
    <label>Decision Maker</label>
    <type>Checkbox</type>
</CustomField>