force-app/main/default/objects/Contact/fields/Departments__c.field-meta.xml
<CustomField>
    <fullName>Departments__c</fullName>
    <label>Department</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Departments</valueSetName>
    </valueSet>
</CustomField>