force-app/main/default/objects/Contact/fields/Entitled_to_expenses__c.field-meta.xml
<CustomField>
    <fullName>Entitled_to_expenses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entitled to expenses</label>
    <type>Checkbox</type>
</CustomField>