force-app/main/default/objects/Contact/fields/First_Shift_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Shift_Date__c</fullName>
    <label>First Shift Date</label>
    <type>Date</type>
</CustomField>