force-app/main/default/objects/Contact/fields/General_Cover__c.field-meta.xml
<CustomField>
    <fullName>General_Cover__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Candidate is open to General Cover</inlineHelpText>
    <label>General Cover</label>
    <type>Checkbox</type>
</CustomField>