force-app/main/default/objects/Contact/fields/HasResume__c.field-meta.xml
<CustomField>
    <fullName>HasResume__c</fullName>
    <label>HasResume</label>
    <length>10</length>
    <type>Text</type>
</CustomField>