force-app/main/default/objects/Contact/fields/Health_Social_Care_Role__c.field-meta.xml
<CustomField>
    <fullName>Health_Social_Care_Role__c</fullName>
    <label>Health &amp; Social Care Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Activity Coordinator</fullName>
            </value>
            <value>
                <fullName>Admin Manager</fullName>
            </value>
            <value>
                <fullName>CAMHS Worker</fullName>
            </value>
            <value>
                <fullName>Care Coordinator</fullName>
            </value>
            <value>
                <fullName>Clinical Lead</fullName>
            </value>
            <value>
                <fullName>Commissioner</fullName>
            </value>
            <value>
                <fullName>Deputy Manager</fullName>
            </value>
            <value>
                <fullName>Duty Officer</fullName>
            </value>
            <value>
                <fullName>Family Support Worker</fullName>
            </value>
            <value>
                <fullName>Head of Service</fullName>
            </value>
            <value>
                <fullName>Health Care Assistant</fullName>
            </value>
            <value>
                <fullName>HR Manager</fullName>
            </value>
            <value>
                <fullName>LADO (Local Authority Designated Officer)</fullName>
            </value>
            <value>
                <fullName>Legal Aid/Solicitor</fullName>
            </value>
            <value>
                <fullName>Nurse Manager</fullName>
            </value>
            <value>
                <fullName>Operations/Services Manager</fullName>
            </value>
            <value>
                <fullName>Parent/Guardian</fullName>
            </value>
            <value>
                <fullName>Permanence Lead</fullName>
            </value>
            <value>
                <fullName>Probation Officer</fullName>
            </value>
            <value>
                <fullName>Registered Manager</fullName>
            </value>
            <value>
                <fullName>Senior Nurse</fullName>
            </value>
            <value>
                <fullName>Senior Practitioner</fullName>
            </value>
            <value>
                <fullName>Sister</fullName>
            </value>
            <value>
                <fullName>Site Manager</fullName>
            </value>
            <value>
                <fullName>Social Worker</fullName>
            </value>
            <value>
                <fullName>Social Worker Manager</fullName>
            </value>
            <value>
                <fullName>Support Worker</fullName>
            </value>
            <value>
                <fullName>Team Manager/Team Leader</fullName>
            </value>
            <value>
                <fullName>Ward Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>