force-app/main/default/objects/Contact/fields/Holiday_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Pay_Rate__c</fullName>
    <label>Holiday Pay Rate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12.07</fullName>
                <default>true</default>
                <label>12.07</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>