force-app/main/default/objects/Contact/fields/Holiday_Pay_Rule__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Pay_Rule__c</fullName>
    <label>Holiday Pay Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Retain Holiday</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Pay Holiday</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>