force-app/main/default/objects/Contact/fields/Hot_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Hot_Candidate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hot Candidate</label>
    <type>Checkbox</type>
</CustomField>