force-app/main/default/objects/Contact/fields/Integrated_Department__c.field-meta.xml
<CustomField>
    <fullName>Integrated_Department__c</fullName>
    <label>Integrated Department</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounts/Finance</fullName>
            </value>
            <value>
                <fullName>AV Manager</fullName>
            </value>
            <value>
                <fullName>CEO/Board Level</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>HR/Recruitment</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Projects</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>