force-app/main/default/objects/Contact/fields/Integrated_Role__c.field-meta.xml
<CustomField>
    <fullName>Integrated_Role__c</fullName>
    <label>Integrated Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3D Animator</fullName>
            </value>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Audio Technician</fullName>
            </value>
            <value>
                <fullName>AV Event Technician</fullName>
            </value>
            <value>
                <fullName>AV Manager</fullName>
            </value>
            <value>
                <fullName>CAD/Auto CAD</fullName>
            </value>
            <value>
                <fullName>Camera Operator</fullName>
            </value>
            <value>
                <fullName>CCTV/Security Engineer</fullName>
            </value>
            <value>
                <fullName>CEO/Owner</fullName>
            </value>
            <value>
                <fullName>Commissioning</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Co-Ordinator</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Fibre/Data Engineers</fullName>
            </value>
            <value>
                <fullName>Field Service</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Graphics</fullName>
            </value>
            <value>
                <fullName>Head of Department</fullName>
            </value>
            <value>
                <fullName>Health and Safety/QSHE</fullName>
            </value>
            <value>
                <fullName>Helpdesk</fullName>
            </value>
            <value>
                <fullName>Hire Desk</fullName>
            </value>
            <value>
                <fullName>Human resources</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>IT General</fullName>
            </value>
            <value>
                <fullName>Lighting Designer</fullName>
            </value>
            <value>
                <fullName>Lighting Technician</fullName>
            </value>
            <value>
                <fullName>Network Manager</fullName>
            </value>
            <value>
                <fullName>Onsite Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>