force-app/main/default/objects/Contact/fields/LTD_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>LTD_Account_Name__c</fullName>
    <label>LTD Account Name</label>
    <length>100</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>