force-app/main/default/objects/Contact/fields/LTD_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>LTD_Account_Number__c</fullName>
    <label>LTD Account Number</label>
    <length>20</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>