force-app/main/default/objects/Contact/fields/LTD_Address__c.field-meta.xml
<CustomField>
    <fullName>LTD_Address__c</fullName>
    <label>LTD Address</label>
    <type>Address</type>
</CustomField>