force-app/main/default/objects/Contact/fields/LTD_Communication_Method__c.field-meta.xml
<CustomField>
    <fullName>LTD_Communication_Method__c</fullName>
    <label>LTD Communication Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>E</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>None</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Phone</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>