force-app/main/default/objects/Contact/fields/LTD_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>LTD_Company_Name__c</fullName>
    <label>LTD Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>