force-app/main/default/objects/Contact/fields/LTD_Company_Number__c.field-meta.xml
<CustomField>
    <fullName>LTD_Company_Number__c</fullName>
    <label>LTD Company Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>