force-app/main/default/objects/Contact/fields/LTD_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>LTD_Email_Address__c</fullName>
    <label>LTD Email Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>