force-app/main/default/objects/Contact/fields/LTD_Sort_Code__c.field-meta.xml
<CustomField>
    <fullName>LTD_Sort_Code__c</fullName>
    <label>LTD Sort Code</label>
    <length>10</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>