force-app/main/default/objects/Contact/fields/LTD_VAT_Code__c.field-meta.xml
<CustomField>
    <fullName>LTD_VAT_Code__c</fullName>
    <label>LTD VAT Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>Z</fullName>
            </value>
            <value>
                <fullName>X</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>IRISH VAT</fullName>
            </value>
            <value>
                <fullName>Rate 23</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>