force-app/main/default/objects/Contact/fields/LTD_VAT_No__c.field-meta.xml
<CustomField>
    <fullName>LTD_VAT_No__c</fullName>
    <label>LTD VAT No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>