force-app/main/default/objects/Contact/fields/Mobile_Second__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Second__c</fullName>
    <label>Mobile Second</label>
    <type>Phone</type>
</CustomField>