force-app/main/default/objects/Contact/fields/National_Insurance__c.field-meta.xml
<CustomField>
    <fullName>National_Insurance__c</fullName>
    <label>National Insurance</label>
    <length>9</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>