force-app/main/default/objects/Contact/fields/Parsed_Systems_Experience__c.field-meta.xml
<CustomField>
    <fullName>Parsed_Systems_Experience__c</fullName>
    <label>Parsed Systems Experience</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>