force-app/main/default/objects/Contact/fields/Pay_Type__c.field-meta.xml
<CustomField>
    <fullName>Pay_Type__c</fullName>
    <label>Pay Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LTD</fullName>
            </value>
            <value>
                <fullName>PAYE</fullName>
            </value>
            <value>
                <fullName>UMB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>