force-app/main/default/objects/Contact/fields/Payroll_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Frequency__c</fullName>
    <label>Payroll Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Two-Weekly</fullName>
            </value>
            <value>
                <fullName>Four-Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>